--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "webpack serve",
     "build": "cross-env NODE_ENV=production webpack",
     "lint:prettier": "yarn prettier --check --ignore-unknown .",
-    "lint:es": "eslint --ext .jsx,.js src/ --cache --cache-location .cache/.eslintcache",
-    "lint:style": "stylelint \"./src/**/*.css\" --cache --cache-location .cache/.stylelintcache"
+    "lint:es": "eslint --ext .jsx,.js src/ --cache --cache-location .cache/.eslintcache"
   },
   "license": "MIT",
   "devDependencies": {
@@ -51,7 +50,8 @@
     "@vkontakte/vkui": "^5.0.1",
     "core-js": "^3.21.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "prop-types": "^15.8.1"
   },
   "engines": {
     "yarn": "^1.21.1"
